infrastructure/controllers/openbao/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: openbao-http
  namespace: openbao
spec:
  selector:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao-openbao
    component: server
  ports:
    - name: http
      port: 8080
      targetPort: 8080
